--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "webpack_boilerplate",
   "version": "1.0.0",
-  "description": "",
+  "description": "webpack 3 Boilerplate with Babel, SASS",
   "main": "main.js",
   "scripts": {
     "start": "webpack --config webpack.config.js",
@@ -10,6 +10,9 @@
   "author": "Chiheb Nabil",
   "license": "ISC",
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-es2015": "^6.24.1",
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.2",
     "node-sass": "^4.7.2",
